[project]
name = "keruyun-sdk"
version = "0.1.0"
description = "Python SDK for the Keruyun open platform API"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: tests that hit real Keruyun API (deselect with '-m not integration')"]
